Fix drawer display issue in dark mode

--- a/src/app.scss
+++ b/src/app.scss
@@ -22,7 +22,6 @@ html {
   .google-logo {
     width: 74px;
     height: 24px;
-    opacity: 0.6;
     position: relative;
     bottom: -1px;
   }
@@ -63,18 +62,14 @@ header {
   }
 }
 
-.side-drawer.open {
-  transform: translateX(0);
-}
 .side-drawer {
   height: 100vh;
   width: 300px;
   max-width: 80%;
-  box-shadow: 2px 0px 5px gray;
   position: fixed;
   top: 0;
   left: 0;
-  background: white;
+  border-right: white solid 1px;
   z-index: 200;
   transform: translateX(-100%);
   transition: transform 0.3s ease-out;
